--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -1,6 +1,6 @@
 .projects-section {
   clear: both;
-  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .projects-container {
